[package]
name = "waihona"
version = "0.1.0"
authors = ["Diretnan Domnan <diretnandomnan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.48"
bytes = "1.0"
futures = "0.3"
regex = "1.4.5"
rusoto_core = { version = "0.46.0", optional = true }
rusoto_s3 = { version = "0.46.0", optional = true }
strum_macros = "0.20.1"
tokio = "1.0"

[features]
aws = [ "rusoto_core", "rusoto_s3"]
gcp = []
azure = []
