[package]
name = "waihona"
version = "0.0.1"
authors = ["Diretnan Domnan <diretnandomnan@gmail.com>", "Wisdom Praise <wisdompraise968@gmail.com"]
edition = "2018"
categories = ["web-programming", "asynchronous", "api-bindings"]
keywords = ["web-programming", "cloud", "cloud storage", "containers", "aws", "gcp", "azure", "blob", "bucket"]
license-file = "LICENSE"
repository = "https://github.com/bisoncorps/waihona"
documentation = "https://docs.rs/waihona"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
async-trait = "0.1.48"
bytes = "1.0"
futures = "0.3.4"
regex = "1.4.5"
rusoto_core = { version = "0.46.0", optional = true }
rusoto_s3 = { version = "0.46.0", optional = true }
cloud-storage = { version = "0.10", optional = true }
strum_macros = "0.20.1"
tokio = "1.4.0"
# ring = "0.16.20"
ring = { version = "0.14.5", optional = true }
azure_sdk_for_rust = { version = "0.12.0", optional = true }


[features]
aws = [ "rusoto_core", "rusoto_s3"]
gcp = [ "cloud-storage" ]
azure = ["azure_sdk_for_rust", "ring"]
